--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,4 +11,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./api
+    volumes:
+      - "./app:/app/app"
     container_name: api
+    env_file: .env
